Added basic functionality for create, get, list and delete edge using jooq